--- a/lv_template.uvprojx
+++ b/lv_template.uvprojx
@@ -1405,7 +1405,7 @@
           <targetInfo name="Cortex-M55_MPS3"/>
         </targetInfos>
       </component>
-      <component Cbundle="LVGL9" Cclass="LVGL" Cgroup="Demos" Csub="Render Test" Cvendor="LVGL" Cversion="9.0.0" condition="LVGL-Essential-Assets">
+      <component Cbundle="LVGL9" Cclass="LVGL" Cgroup="Demos" Csub="Benchmark" Cvendor="LVGL" Cversion="9.0.0" condition="LVGL-Essential-Assets">
         <package name="lvgl" schemaVersion="1.7.28" url="https://raw.githubusercontent.com/lvgl/lvgl/master/env_support/cmsis-pack/" vendor="LVGL" version="9.0.0-dev4"/>
         <targetInfos>
           <targetInfo name="Cortex-M55_FVP"/>
