--- a/lv_template.uvprojx
+++ b/lv_template.uvprojx
@@ -314,7 +314,7 @@
           </ArmAdsMisc>
           <Cads>
             <interw>1</interw>
-            <Optim>5</Optim>
+            <Optim>0</Optim>
             <oTime>0</oTime>
             <SplitLS>0</SplitLS>
             <OneElfS>1</OneElfS>
@@ -337,7 +337,7 @@
             <v6WtE>0</v6WtE>
             <v6Rtti>0</v6Rtti>
             <VariousControls>
-              <MiscControls></MiscControls>
+              <MiscControls>-Omax</MiscControls>
               <Define>__USE_FVP__</Define>
               <Undefine></Undefine>
               <IncludePath>.\platform;.</IncludePath>
