--- a/lv_template.uvprojx
+++ b/lv_template.uvprojx
@@ -314,7 +314,7 @@
           </ArmAdsMisc>
           <Cads>
             <interw>1</interw>
-            <Optim>2</Optim>
+            <Optim>1</Optim>
             <oTime>0</oTime>
             <SplitLS>0</SplitLS>
             <OneElfS>1</OneElfS>
@@ -595,14 +595,14 @@
               <FilePath>.\lv_gpu_arm2d.h</FilePath>
             </File>
             <File>
-              <FileName>lv_blend_helium.h</FileName>
+              <FileName>lv_draw_sw_arm2d.h</FileName>
               <FileType>5</FileType>
-              <FilePath>.\helium\lv_blend_helium.h</FilePath>
+              <FilePath>.\arm2d\lv_draw_sw_arm2d.h</FilePath>
             </File>
             <File>
               <FileName>lv_draw_sw_helium.h</FileName>
               <FileType>5</FileType>
-              <FilePath>.\helium\lv_draw_sw_helium.h</FilePath>
+              <FilePath>.\arm2d\lv_draw_sw_helium.h</FilePath>
             </File>
           </Files>
         </Group>
@@ -1221,14 +1221,14 @@
               <FilePath>.\lv_gpu_arm2d.h</FilePath>
             </File>
             <File>
-              <FileName>lv_blend_helium.h</FileName>
+              <FileName>lv_draw_sw_arm2d.h</FileName>
               <FileType>5</FileType>
-              <FilePath>.\helium\lv_blend_helium.h</FilePath>
+              <FilePath>.\arm2d\lv_draw_sw_arm2d.h</FilePath>
             </File>
             <File>
               <FileName>lv_draw_sw_helium.h</FileName>
               <FileType>5</FileType>
-              <FilePath>.\helium\lv_draw_sw_helium.h</FilePath>
+              <FilePath>.\arm2d\lv_draw_sw_helium.h</FilePath>
             </File>
           </Files>
         </Group>
@@ -1261,6 +1261,51 @@
   </Targets>
 
   <RTE>
+    <packages>
+      <filter>
+        <targetInfos/>
+      </filter>
+      <package name="Arm-2D" vendor="ARM" version="1.1.5">
+        <targetInfos>
+          <targetInfo name="Cortex-M55_MPS3" versionMatchMode="fixed"/>
+        </targetInfos>
+      </package>
+      <package name="CMSIS-Compiler" vendor="ARM" version="2.0.0">
+        <targetInfos>
+          <targetInfo name="Cortex-M55_MPS3" versionMatchMode="fixed"/>
+        </targetInfos>
+      </package>
+      <package name="CMSIS-DSP" vendor="ARM" version="1.15.0">
+        <targetInfos>
+          <targetInfo name="Cortex-M55_MPS3" versionMatchMode="fixed"/>
+        </targetInfos>
+      </package>
+      <package name="CMSIS-View" vendor="ARM" version="1.1.0">
+        <targetInfos>
+          <targetInfo name="Cortex-M55_MPS3" versionMatchMode="fixed"/>
+        </targetInfos>
+      </package>
+      <package name="CMSIS" vendor="ARM" version="6.0.0">
+        <targetInfos>
+          <targetInfo name="Cortex-M55_MPS3" versionMatchMode="fixed"/>
+        </targetInfos>
+      </package>
+      <package name="V2M_MPS3_SSE_300_BSP" vendor="ARM" version="1.4.0">
+        <targetInfos>
+          <targetInfo name="Cortex-M55_MPS3" versionMatchMode="fixed"/>
+        </targetInfos>
+      </package>
+      <package name="perf_counter" vendor="GorgonMeducer" version="9.9.9">
+        <targetInfos>
+          <targetInfo name="Cortex-M55_MPS3" versionMatchMode="fixed"/>
+        </targetInfos>
+      </package>
+      <package name="lvgl" vendor="LVGL" version="9.0.0">
+        <targetInfos>
+          <targetInfo name="Cortex-M55_MPS3" versionMatchMode="fixed"/>
+        </targetInfos>
+      </package>
+    </packages>
     <apis>
       <api Capiversion="2.3.0" Cclass="CMSIS Driver" Cgroup="SPI" exclusive="0">
         <package name="CMSIS" schemaVersion="1.3" url="http://www.keil.com/pack/" vendor="ARM" version="5.7.0"/>
@@ -1285,6 +1330,13 @@
       </api>
     </apis>
     <components>
+      <component Cclass="Acceleration" Cgroup="Arm-2D Helper" Csub="PFB" Cvendor="ARM" Cversion="1.8.4" condition="Arm-2D-CORE">
+        <package name="Arm-2D" schemaVersion="1.7.28" url="https://www.keil.com/pack/" vendor="ARM" version="9.9.9"/>
+        <targetInfos>
+          <targetInfo name="Cortex-M55_FVP"/>
+          <targetInfo name="Cortex-M55_MPS3"/>
+        </targetInfos>
+      </component>
       <component Cclass="Acceleration" Cgroup="Arm-2D" Csub="Alpha-Blending" Cvendor="ARM" Cversion="1.1.5" condition="Arm-2D-CORE">
         <package name="Arm-2D" schemaVersion="1.7.28" url="https://www.keil.com/pack/" vendor="ARM" version="9.9.9"/>
         <targetInfos>
@@ -1426,7 +1478,7 @@
         </targetInfos>
       </component>
       <component Cbundle="LVGL9" Cclass="LVGL" Cgroup="Demos" Csub="Widgets" Cvendor="LVGL" Cversion="9.0.0" condition="LVGL-Essential-Assets">
-        <package name="lvgl" schemaVersion="1.7.28" url="https://raw.githubusercontent.com/lvgl/lvgl/master/env_support/cmsis-pack/" vendor="LVGL" version="9.0.0-dev4"/>
+        <package name="lvgl" schemaVersion="1.7.28" url="https://raw.githubusercontent.com/lvgl/lvgl/master/env_support/cmsis-pack/" vendor="LVGL" version="9.0.0"/>
         <targetInfos>
           <targetInfo name="Cortex-M55_FVP"/>
           <targetInfo name="Cortex-M55_MPS3"/>
@@ -1451,7 +1503,7 @@
       <file attr="config" category="other" name="tools\README.md" version="1.2.2">
         <instance index="0">RTE\Acceleration\README.md</instance>
         <component Cclass="Acceleration" Cgroup="Arm-2D" Csub="Core" Cvendor="ARM" Cversion="1.1.5" condition="CMSIS-DSP"/>
-        <package name="Arm-2D" schemaVersion="1.7.28" url="https://www.keil.com/pack/" vendor="ARM" version="9.9.9"/>
+        <package name="Arm-2D" schemaVersion="1.7.28" url="https://www.keil.com/pack/" vendor="ARM" version="1.1.5"/>
         <targetInfos>
           <targetInfo name="Cortex-M55_FVP"/>
           <targetInfo name="Cortex-M55_MPS3"/>
@@ -1460,7 +1512,7 @@
       <file attr="config" category="sourceC" name="Library\Source\arm_2d.c" version="1.3.1">
         <instance index="0">RTE\Acceleration\arm_2d.c</instance>
         <component Cclass="Acceleration" Cgroup="Arm-2D" Csub="Core" Cvendor="ARM" Cversion="1.1.5" condition="CMSIS-DSP"/>
-        <package name="Arm-2D" schemaVersion="1.7.28" url="https://www.keil.com/pack/" vendor="ARM" version="9.9.9"/>
+        <package name="Arm-2D" schemaVersion="1.7.28" url="https://www.keil.com/pack/" vendor="ARM" version="1.1.5"/>
         <targetInfos>
           <targetInfo name="Cortex-M55_FVP"/>
           <targetInfo name="Cortex-M55_MPS3"/>
@@ -1469,7 +1521,7 @@
       <file attr="config" category="preIncludeGlobal" name="Library\Include\template\arm_2d_cfg.h" version="1.3.1">
         <instance index="0">RTE\Acceleration\arm_2d_cfg.h</instance>
         <component Cclass="Acceleration" Cgroup="Arm-2D" Csub="Core" Cvendor="ARM" Cversion="1.1.5" condition="CMSIS-DSP"/>
-        <package name="Arm-2D" schemaVersion="1.7.28" url="https://www.keil.com/pack/" vendor="ARM" version="9.9.9"/>
+        <package name="Arm-2D" schemaVersion="1.7.28" url="https://www.keil.com/pack/" vendor="ARM" version="1.1.5"/>
         <targetInfos>
           <targetInfo name="Cortex-M55_FVP"/>
           <targetInfo name="Cortex-M55_MPS3"/>
@@ -1478,7 +1530,7 @@
       <file attr="config" category="utility" name="tools\img2c.py" version="1.2.2">
         <instance index="0">RTE\Acceleration\img2c.py</instance>
         <component Cclass="Acceleration" Cgroup="Arm-2D" Csub="Core" Cvendor="ARM" Cversion="1.1.5" condition="CMSIS-DSP"/>
-        <package name="Arm-2D" schemaVersion="1.7.28" url="https://www.keil.com/pack/" vendor="ARM" version="9.9.9"/>
+        <package name="Arm-2D" schemaVersion="1.7.28" url="https://www.keil.com/pack/" vendor="ARM" version="1.1.5"/>
         <targetInfos>
           <targetInfo name="Cortex-M55_FVP"/>
           <targetInfo name="Cortex-M55_MPS3"/>
@@ -1487,7 +1539,7 @@
       <file attr="config" category="utility" name="tools\ttf2c.py" version="1.2.0">
         <instance index="0">RTE\Acceleration\ttf2c.py</instance>
         <component Cclass="Acceleration" Cgroup="Arm-2D" Csub="Core" Cvendor="ARM" Cversion="1.1.5" condition="CMSIS-DSP"/>
-        <package name="Arm-2D" schemaVersion="1.7.28" url="https://www.keil.com/pack/" vendor="ARM" version="9.9.9"/>
+        <package name="Arm-2D" schemaVersion="1.7.28" url="https://www.keil.com/pack/" vendor="ARM" version="1.1.5"/>
         <targetInfos>
           <targetInfo name="Cortex-M55_FVP"/>
           <targetInfo name="Cortex-M55_MPS3"/>
